--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
 
 .nav-titles__label {
 	padding: 0px 0px 0px 50px;
-	background: url("../img/icon/Vector.svg") 0 0 / 40px no-repeat;
+	background: url("../img/icon/vector.svg") 0 0 / 40px no-repeat;
 	background-position: left;
 	color: white;
 	font-size: 26px;
