--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,7 @@ body {
 	transform: translate(88%, 0px);
 	width: 68%;
 	height: 100%;
-	background: url("../img/stats/Blob_2.webp") 0 0 / 100% no-repeat;
+	background: url("../img/stats/blob_2.webp") 0 0 / 100% no-repeat;
 }
 
 .stats__body {
