--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .nav-test__content {
-	flex: 1 1 auto;
+	flex: 0 1 auto;
 }
 
 .nav-test__header {
@@ -83,6 +83,13 @@ body {
 	display: flex;
 }
 
+.nav-test__header {
+	display: flex;
+	flex-grow: 2;
+}
+
+.titles {}
+
 .nav-titles__label {
 	padding: 0px 0px 0px 50px;
 	background: url("../img/icon/vector.svg") 0 0 / 40px no-repeat;
@@ -91,9 +98,7 @@ body {
 	font-size: 26px;
 	line-height: 1.6;
 	font-weight: 700;
-	/* display: flex;
-	flex-shrink: 150px; */
-	margin-right: 160px;
+	margin-right: 240px;
 }
 
 .nav-titles__item {
@@ -104,8 +109,8 @@ body {
 }
 
 .about {
-	margin: 0px 0px 100px 0px;
-
+	/* margin: 0px 0px -100px 0px; */
+	
 }
 
 .about__body {
@@ -113,7 +118,8 @@ body {
 	border-radius: 40px;
 	padding: 0px 0px 0px 0px;
 	position: relative;
-	top: -80px;
+	top: -220px;
+	max-height: 700px;
 }
 
 .about__header {
@@ -128,6 +134,7 @@ body {
 	z-index: 1;
 	width: 100%;
 	height: 100%;
+	bottom: 35px;
 }
 
 .image {
@@ -140,11 +147,11 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: url("../img/Blob_2.png") 0 0 / 80% no-repeat;
+	background: url("../img/Blob_2.png") 0 0 / 65% no-repeat;
 	display: flex;
 	background-position: center;
 	background-repeat: no-repeat;
-	left: -140px;
+	left: -200px;
 	bottom: -180px;
 }
 
@@ -162,10 +169,16 @@ body {
 	box-shadow: 0px 15px 10px rgb(29, 29, 29, 0.3);
 }
 
-.header {
+/* .header {
 	background: url("../img/duotone.webp") 0 0 /cover no-repeat;
 	height: 800px;
+} */
+
+.top-nav__body {
+	position: relative;
+	z-index: 1;
 }
+	
 
 .top-nav__utility {
 	max-width: 1020px;
@@ -223,30 +236,41 @@ body {
 	margin-bottom: 130px;
 }
 
-.top-nav__icon {
+/* .top-nav__icon {
 	display: flex;
 	max-width: 120px;
 	max-height: 60px;
 	align-items: flex-end;
+} */
+
+.top-nav__icon {
+	display: flex;
+	height: 100%;
+	min-width: 130px;
+	padding: 0 40px 0 12px;
+	flex-wrap: wrap;
+	column-gap: 22px;
+	align-self: center;
 }
 
 .top-nav__search {
 	background: url("../img/search_24px.svg") 0 0 / 20px no-repeat;
-	width: 55px;
+	width: 20px;
 	height: 20px;
 	background-position: left;
-	position: relative;
-	bottom: 20px;
+	/* position: relative;
+	bottom: 20px; */
+	cursor: pointer;
 }
-
 
 .top-nav__shoping {
 	background: url("../img/shopping_cart_24px.svg") 0 0 / 22px no-repeat;
-	width: 65px;
+	width: 20px;
 	height: 20px;
 	background-position: left;
-	position: relative;
-	bottom: 20px;
+	/* position: relative;
+	bottom: 20px; */
+	cursor: pointer;
 }
 
 .top-nav__ellipse {
@@ -273,7 +297,6 @@ body {
 }
 
 .navigation__item-link {
-	cursor: pointer;
 	align-self: center;
 }
 
@@ -281,17 +304,18 @@ body {
 	top: 0px;
 	left: 410px;
 	max-width: 190px;
-	margin-left: 30px;
+	margin-left: 40px;
 	display: inline-block;
 }
 
-.footer {
-	background-color: rgb(101, 143, 101);
-	padding: 15px;
+.navigation__link {
+	color: black;
 }
 
+
 .main {
-	flex-grow: 1;
+	flex: 1 1 auto;
+	/* flex-grow: 1; */
 } 
 
 [class*="__container"] {
@@ -341,14 +365,38 @@ body {
 	color: #F2726F;
 }
 
+.hero {
+	position: relative;
+	background: url("../img/duotone.webp") center / cover no-repeat;
+	top: -135px;
+}
+
 .hero__container {
-	padding: 0px 0px 270px 0px;
 	max-width: 1020px;
-	
+}
+
+.hero_margin {
+	margin: -150px 0 0;
+}
+
+.hero__box {
+	padding: 280px 0 312px 0;
+}
+
+.hero__box *:not(:last-child) {
+	margin: 0 0 48px 0;
+}
+
+.hero__title {
+	font-weight: 900;
+	font-size: 56px;
+	line-height: 1;
+	color: #FFFFFF;
+	max-width: 583px;
 }
 
 .hero__content {
-	
+
 }
 
 .hero__title {
@@ -557,7 +605,7 @@ body {
 	transform: translate(88%, 0px);
 	width: 68%;
 	height: 100%;
-	background: url("../img/inpact/blob_2.webp") 0 0 / 100% no-repeat;
+	background: url("../img/stats/blob_2.webp") 0 0 / 100% no-repeat;
 }
 
 .stats__body {
@@ -692,10 +740,16 @@ body {
 	text-align: left;
 	height: 100%;
 	line-height: 1.5;
+	transition: all 0.5s ease 0s;
+}
+
+.item-test:hover {
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
 }
 
 .item__icon-name {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .item-test__text {
@@ -710,3 +764,7 @@ body {
 	padding: 25px 0px 25px 0px;
 }
 
+.footer {
+	background-color: rgb(101, 143, 101);
+	padding: 15px;
+}
